@@ -25,10 +25,17 @@ then
   mvn -B clean package
 fi
 
-for spec_path in modules/openapi-generator/src/test/resources/2_0/rust-server/* ; do
-  export JAVA_OPTS="${JAVA_OPTS} -XX:MaxPermSize=256M -Xmx1024M -DloggerPath=conf/log4j.properties"
+for spec_path in modules/openapi-generator/src/test/resources/*/rust-server/* ; do
+  export JAVA_OPTS="${JAVA_OPTS} -Xmx1024M -DloggerPath=conf/log4j.properties"
   spec=$(basename "$spec_path" | sed 's/.yaml//')
-  ags="generate -t modules/openapi-generator/src/main/resources/rust-server -i $spec_path -g rust-server -o samples/server/petstore/rust-server/output/$spec -DpackageName=$spec --additional-properties hideGenerationTimestamp=true $@"
+  args="generate --template-dir modules/openapi-generator/src/main/resources/rust-server
+                 --input-spec $spec_path
+                 --generator-name rust-server
+                 --output samples/server/petstore/rust-server/output/$spec
+                 -DpackageName=$spec
+                 --additional-properties hideGenerationTimestamp=true
+                 --generate-alias-as-model
+		 $@"
 
-  java $JAVA_OPTS -jar $executable $ags
+  java $JAVA_OPTS -jar $executable $args
 done
